# xtalbake

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/xtalbake/: __init__.py  _tec_protocol.py  covesion_oc3.py  device_discovery.py  mtd1020t.py  ui.py  xtalbake_gui.py
src/xtalbake/ui/: xtalbake.ui
testing/: discovery.py  list_ports.py
