[project]
name = "xtalbake"
version = "0.2.0"
license = {file = "LICENSE"}
description = "Control library for crystal ovens"
readme = "README.md"
authors = [
    { email = "peter.barrow.93@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "pyserial",
]

[project.optional-dependencies]
gui = [
    "matplotlib",
    "pyqt6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
xtalbake-ui = "xtalbake.ui:main"
xtalbake-gui = "xtalbake.xtalbake_gui:main"
xtalbake-discover = "xtalbake.device_discovery:main"
