[project]
name = "xtalbake"
version = "0.2.0"
license = {file = "LICENSE"}
description = "Control library for crystal ovens"
readme = "README.md"
authors = [
    { email = "peter.barrow.93@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
]

[project.optional-dependencies]
gui = [
    "matplotlib",
    "pyqt6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xtalbake = ["ui/*.ui"]

[project.scripts]
xtalbake-gui = "xtalbake.xtalbake_gui:main"
xtalbake-discover = "xtalbake.device_discovery:main"
